fixed some spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,17 +34,18 @@ body, html {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
+  line-height: 1.5rem;
 }
 
 .blue-bg {
   background-color: #1c5380;
-  height: 45vh;
+  height: 40vh;
   position: relative;
   z-index: -1;
 }
 
 .white-bg {
-  height: 55vh;
+  height: 60vh;
   position: relative;
   z-index: -1;
 }
@@ -54,10 +55,7 @@ body, html {
   flex-direction: row-reverse;
   justify-content: center;
   gap: 5rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-top: 10vh;
+  
 }
 
 .right-side {
@@ -75,7 +73,7 @@ body, html {
 }
 
 .right-header > img {
-  width: 60%;
+  width: 50%;
 }
 
 .home-btn {
@@ -89,6 +87,7 @@ body, html {
   border: 1px solid black;
   border-radius: 5px;
   height: 2.5rem;
+  width: 18%;
 }
 
 .home-btn > img {
@@ -102,22 +101,54 @@ body, html {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem 2rem;
+  padding: 1.5rem 2rem;
 }
 
 .text h1 {
   font-size: 2rem;
   color: #06365f;
   width: 60%;
+  line-height: 2rem;
 }
 
 .nav-bar {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  padding: 1.5rem 15rem;
 }
 
 .nav-bar li {
   list-style: none;
+  font-weight: bold;
+  color: #1c5380;
 }
 
+.nav-bar li:last-child {
+  font-weight: normal;
+  color: grey;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 10vh;
+}
+
+.left-side img {
+  width: 90%;
+}
+
+.badges {
+  display: flex;
+  justify-content: flex-start;
+  padding: 0 2rem;
+  gap: 2rem;
+}
+
+.badges img {
+  width: 30%;
+}
